crates/ripe-tui/src/ui/snapshots/ripe__ui__tests__help_overlay_open.snap
---
source: crates/ripe-tui/src/ui/mod.rs
assertion_line: 341
expression: "render_to_string(&mut app, 120, 40)"
---
 PIPES   EDIT  RUN  VIEW  HELP                               news_pipeline.pipe                               ● 3 nodes
┏Palette━━━━━━━━━━━━━┓┌Canvas─────────────────────────────────────────────────────────┐┌Preview────────────────────────┐
┃NODES               ┃│╔════════════════════════════╗                                 ││ FEED    ITEMS    RAW          │
┃  filter           t┃│║1  Fetch Feed               ║                                 ││                               │
┃  limit            l┃│║https://example.com/rss     ║                                 ││    M13: preview lands here    │
┃  regex            r┃│╚════════════════════════════╝                                 ││                               │
┃  reverse          e┃│               ▼                                               ││                               │
┃  sort             s┃│╭────────────────────────────╮                                 ││                               │
┃  tail             i┃││2  Filter                   │                                 ││                               │
┃  transform        m┃││(no rules)                  │                                 ││                               │
┃  union            u┃│╰────────────────────────────╯                                 ││                               │
┃  unique           q┃│               ▼                                               ││                               │
┃                    ┃│╭────────────────────────────╮                                 ││                               │
┃SOURCES             ┃││3  Output                   │                                 ││                               │
┃  fetch_csv        v┃││rss → stdout                │                                 ││                               │
┃  fetch_feed       f┃│╰────────────────────────────╯                                 ││                               │
┃  fetch_json       j┃│                 ╔Help══════════════════════════════════╗      ││                               │
┃                    ┃│                 ║ Tab         cycle pane focus         ║      ││                               │
┃SINKS               ┃│                 ║ ?           toggle this help         ║      ││                               │
┃  output           o┃│                 ║ Esc         close help               ║      ││                               │
┃                    ┃│                 ║ q / Ctrl-C  quit                     ║      ││                               │
┃                    ┃│                 ║                                      ║      ││                               │
┃                    ┃│                 ║                                      ║      ││                               │
┃                    ┃│                 ╚══════════════════════════════════════╝      ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││                               │
┃                    ┃│                                                               ││               Auto refresh: on│
┗━━━━━━━━━━━━━━━━━━━━┛└───────────────────────────────────────────────────────────────┘└───────────────────────────────┘
 Mode: Normal                                                                         tab switch pane   ? help   q quit
