crates/ripe-tui/src/ui/snapshots/ripe__ui__tests__mockup_pipe_canvas.snap
---
source: crates/ripe-tui/src/ui/mod.rs
assertion_line: 376
expression: "render_to_string(&mut app, 120, 40)"
---
 PIPES   EDIT  RUN  VIEW  HELP                               news_pipeline.pipe                               ● 8 nodes
┌Palette─────────────┐┏Canvas━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌Preview────────────────────────┐
│NODES               │┃╔════════════════════════════╗   ╭────────────────────────────╮┃│ FEED    ITEMS (0)    RAW      │
│  filter           t│┃║1  Fetch Feed               ║   │5  Fetch Feed               │┃│                               │
│  limit            l│┃║https://hnrss.or… ✓ 44 items║   │https://www.redd… ✓ 44 items│┃│No preview yet — press r to run│
│  regex            r│┃╚════════════════════════════╝   ╰────────────────────────────╯┃│           the pipe.           │
│  reverse          e│┃               ▼                                │              ┃│                               │
│  sort             s│┃╭────────────────────────────╮                  │              ┃│                               │
│  tail             i│┃│2  Filter                   │                  │              ┃│                               │
│  transform        m│┃│item.pubDate > n… ✓ 32 items│                  │              ┃│                               │
│  union            u│┃╰────────────────────────────╯                  │              ┃│                               │
│  unique           q│┃               ▼                                │              ┃│                               │
│                    │┃╭────────────────────────────╮                  │              ┃│                               │
│SOURCES             │┃│3  Regex                    │                  │              ┃│                               │
│  fetch_csv        v│┃│^\[(?<score>\d+)… ✓ 32 items│                  │              ┃│                               │
│  fetch_feed       f│┃╰────────────────────────────╯                  │              ┃│                               │
│  fetch_json       j│┃               ▼                                │              ┃│                               │
│                    │┃╭────────────────────────────╮                  │              ┃│                               │
│SINKS               │┃│4  Filter                   │                  │              ┃│                               │
│  output           o│┃│score > 100       ✓ 12 items│                  │              ┃│                               │
│                    │┃╰────────────────────────────╯                  │              ┃│                               │
│                    │┃               ├────────────────────────────────┘              ┃│                               │
│                    │┃╭────────────────────────────╮                                 ┃│                               │
│                    │┃│6  Union                    │                                 ┃│                               │
│                    │┃│merge streams     ✓ 44 items│                                 ┃│                               │
│                    │┃╰────────────────────────────╯                                 ┃│                               │
│                    │┃               ▼                                               ┃│                               │
│                    │┃╭────────────────────────────╮                                 ┃│                               │
│                    │┃│7  Sort                     │                                 ┃│                               │
│                    │┃│By: pubDate desc  ✓ 44 items│                                 ┃│                               │
│                    │┃╰────────────────────────────╯                                 ┃│                               │
│                    │┃               ▼                                               ┃│                               │
│                    │┃╭────────────────────────────╮                                 ┃│                               │
│                    │┃│8  Output                   │                                 ┃│                               │
│                    │┃│rss → temp://out… ✓ 44 items│                                 ┃│                               │
│                    │┃╰────────────────────────────╯                                 ┃│                               │
│                    │┃                                                               ┃│                               │
│                    │┃                                                               ┃│ Rendered 0 i…Auto refresh: on │
└────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└───────────────────────────────┘
 Mode: Normal                              a insert   d del   c connect   r run   j/k move   tab pane   ? help   q quit
