crates/ripe-tui/src/ui/snapshots/ripe__ui__tests__preview_error_state.snap
---
source: crates/ripe-tui/src/ui/mod.rs
expression: "render_to_string(&mut app, 160, 40)"
---
 PIPES                                                               news_pipeline.pipe                                                               ● 8 nodes
┌Palette─────────────┐┌Canvas────────────────────────────────────────────────────────────────────────────────────┐┏Preview━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│NODES               ││╔═════════════════════════════════════════╗   ╭─────────────────────────────────────────╮ │┃ FEED    ITEMS (0)    RAW                   ┃
│  filter           t││║1  Fetch Feed                            ║   │2  Fetch Feed                            │ │┃                                            ┃
│  limit            l││║https://hnrss.org/frontpage              ║   │https://www.reddit.com/r/rust/.rss       │ │┃        #1 fetch_feed: 404 Not Found        ┃
│  regex            r││╚═════════════════════════════════════════╝   ╰─────────────────────────────────────────╯ │┃        (https://hnrss.org/frontpage)       ┃
│  reverse          e││                     ▼                                             │                      │┃                                            ┃
│  sort             s││╭─────────────────────────────────────────╮                        │                      │┃                                            ┃
│  tail             i│││3  Filter                                │                        │                      │┃                                            ┃
│  transform        m│││item.pubDate > now - 2d                  │                        │                      │┃                                            ┃
│  union            u││╰─────────────────────────────────────────╯                        │                      │┃                                            ┃
│  unique           q││                     ▼                                             │                      │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                        │                      │┃                                            ┃
│SOURCES             │││4  Regex                                 │                        │                      │┃                                            ┃
│  fetch_csv        v│││^\[(?<score>\d+)\]\s(?<title>.*)         │                        │                      │┃                                            ┃
│  fetch_feed       f││╰─────────────────────────────────────────╯                        │                      │┃                                            ┃
│  fetch_json       j││                     ▼                                             │                      │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                        │                      │┃                                            ┃
│SINKS               │││5  Filter                                │                        │                      │┃                                            ┃
│  output           o│││score > 100                              │                        │                      │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                        │                      │┃                                            ┃
│                    ││                     ├─────────────────────────────────────────────┘                      │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃                                            ┃
│                    │││6  Union                                 │                                               │┃                                            ┃
│                    │││merge streams                            │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                     ▼                                                                    │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃                                            ┃
│                    │││7  Sort                                  │                                               │┃                                            ┃
│                    │││By: pubDate desc                         │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                     ▼                                                                    │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃                                            ┃
│                    │││8  Output                                │                                               │┃                                            ┃
│                    │││rss → temp://output.xml                  │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                                                                                          │┃                                            ┃
│                    ││                                                                                          │┃ eval error               Auto refresh: off ┃
└────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 Mode: Normal                                                                                 [ ] tab   a auto-refresh   j/k scroll   r run   tab pane   ? help
